Wrote a massive comment describing the architecture of the gazer boss.  Copied that into the mushroom boss, since the architecture's almost identical.  Fixed all the syntax errors in the new mushroom boss's (still not doing much) code.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -304,7 +304,7 @@ object_type: [ {
 								lib.audio.play_music(me,'MushroomBossIntro.ogg'),
 								set(_fight_started, true),
 							
-								sched_next_phase,
+								trigger_initial_behavior,
 								map(stalks, fire_event(value,'sprout'))
 							],
 							[
@@ -324,7 +324,6 @@ object_type: [ {
 								]) where frogatto = (obj frogatto_playable <- level.player)",
 		on_die: "[set(hitpoints,1),set(me.is_a_boss, false)]",
 								
-		on_do_behavior_change: "[pick_random_behavior,sched_next_phase]",
 		
 		properties: {
 		#-------------------------- constructor/destructor logic --------------------------#
@@ -362,6 +361,9 @@ object_type: [ {
 			_fight_started: { type: "bool", default: false, persistent: false },
 			_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:3, _pool_size_multiplier: 1})", persistent: false },
 
+
+			_phase_started_at: { type: "int", init: "0", persistent: false },
+			_current_phase_random_timer: { type: "int", init: "0", persistent: false },
 			_state: { type: "MushroomBossBehaviorModeTypes", init: "enum idle", persistent: false },
 
 		#-------------------------- custom death logic --------------------------#
@@ -386,9 +388,37 @@ object_type: [ {
 			
 			
 		#-------------------------- core behavior --------------------------#
+	/*
+		STATEMENT OF INTENT:
+		(copy-pasted from gazer boss, will amend once we've got coherent stuff to document here)
+	
+		The core design of this boss works in phases.  During each phase the boss will completely switch behavior; in some phases it fires a giant laser, in other ones it fires scattershots, etc.  After each phase is done, it picks a new one in a mostly random way (with a couple special rules).  Those special rules are that all the modes are 'shuffled' into a PRNG deck, so that we don't get a horrible random series of modes that never gives you the ammo you need to beat the boss.  The other special rules are some particulars about which modes can follow other modes, and allowing us to only randomly roll certain extra-difficult modes when the boss is closer to being dead.  We've wrapped all of this special logic in the `pick_random_behavior` function.
+
+		There's no special treatment for 'starting' the fight - our `on_create` event just executes a particular attack mode we think is appropriate to start the fight off with (we could have decided to be random, but we felt that starting off by spawning the mooks was always ideal).	
+	
+		There is a global switch statement that controls everything (`process_behavior`).  This completely replaces our `on_process` code, and that event runs literally nothing but this function.  This switch statement simply runs a different set of processing code for each different attach mode the boss has.  Everything's different from mode-to-mode; there's no 'framework' wrapping each of the mode calls, because the few things they have in common were either function calls that need to have *different* parameters, or were the timing call to switch to the next mode (which also needs different parameters).
+		
+		That is likely the last key thing - how is timing and switching between modes handled?  For cycling to the next mode, there's really no 'standard' way.  For some of the modes, we use `_current_phase_random_timer` as a tracking variable, and e.g. set something like:
+		```
+			set(_current_phase_random_timer, 150 + (100 * number_of_mooks_to_spawn) + 300 + 1d50),
+ 		```
+ 		… as a way of triggering the next mode.  However, there's no standard behavior this triggers.  There's no 'watcher' or 'processing' code that decides the next mode we're going to trigger - that's *all* handled directly, and manually, in the `process_whatever` function for each mode.  The one thing that *is* standard is the `pick_random_behavior` function.   It's not mandatory to call this - several of our modes come in two parts (like the animation for the laser charging up, always needing to be perfectly bookended by the animation for the laser blasting away).  So the end of that mode doesn't use `pick_random_behavior`, and instead directly triggers the `begin_whatever` for the next mode.  The reason we've standardized the `pick_random_behavior` function is described up above.
+ 		
+		A common idiom for ending a mode would be e.g:
+		```
+			if(cycle - _phase_started_at = _current_phase_random_timer, [
+				…cleanup code goes here…
+				pick_random_behavior,
+			])
+		```
+	
+		The only other thing you need to do when starting a mode is to set the current `_state` value via e.g. `set(_state, enum spawn_mooks)`, so the switch can do its thing.
+	*/
+
+
 	process_behavior: "				[		
 										switch(_state,
-											enum spawn_acid_rain_glob,		process_aggro_mooks,
+											enum spawn_acid_rain_glob,		process_spawn_acid_rain_glob,
 											enum spore_cloud_setup,			null,
 											enum spore_cloud_emit,			null,
 											enum bomber_shroom_drop, 		null,
@@ -411,6 +441,8 @@ object_type: [ {
 																			; new_behavior,
 																			; set(_phase_started_at, cycle)
 																		]",
+																		
+	trigger_initial_behavior: "pick_specific_behavior( begin_spawn_acid_rain_glob )",
 			
 ###-------------------------- attack pattern handling --------------------------###
 			
@@ -425,11 +457,18 @@ object_type: [ {
 		begin_spawn_acid_rain_glob: "commands :: [
 									mb_debug('MODE: begin_spawn_acid_rain_glob'), 
 									set(_state, enum spawn_acid_rain_glob),
-									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) )
+									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) ),
 									
 									an_upper_stalk.set_behavior('guard'),
 
 							]",
+	
+		process_spawn_acid_rain_glob: "commands :: [
+									if(cycle - _phase_started_at = _current_phase_random_timer, pick_random_behavior)
+
+							]",
+	
+	
 		
 #-------------------------- spore-cloud attack --------------------------#
 	/*
@@ -465,7 +504,7 @@ object_type: [ {
 				spawn_acid_rain_glob,
 				spore_cloud_setup,
 				spore_cloud_emit,
-				bomber_shroom_drop
+				bomber_shroom_drop,
 				idle,
 			}",
 		},
