Tuned a shot to use the seeker code so that we can have the acid-cloud seek a point above the player.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -657,6 +657,45 @@ object_type: [ {
 		},
 	},
 	{
+		id: "acid_dropper_big_shot",
+		prototype: ["seeker_flying"],
+		always_active: true,
+		solid_area: null,
+		
+		properties: {
+			#-------------------------- prototype behavior --------------------------#
+			altitude_adjustment: "( sin(cycle*5+1000)/50)",
+
+
+			player_pos: "level.player.mid_xy",
+		},
+		
+		
+		on_end_anim: "set(animation, animation)",
+		
+		on_timer: "me.fly_to([{x: player_pos.x, y: player_pos.y - 100}]) ",
+		timer_frequency: 15,
+		
+		animation: [{
+			"@base": true,
+			image: "effects/particles5.png",
+			rect: [521,1,582,62],
+			duration: 5,
+			frames: 9,
+			frames_per_row: 3,
+			pad: 3,
+		},{
+			id: "normal",
+		},{
+			id: "turn",
+			frames: 1,
+			duration: 1,
+		},{
+			id: "fly",
+			accel_x: 10,
+		}],
+	},
+	{
 		id: "big_shot_impact",
 		always_active: true,
 		
