Fixed some bad things about the lead-in to the moth-boss fight where the falling characters (frogatto and berd) weren't using their falling animations.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -79,12 +79,16 @@
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "berd",
-			"on_create": "[	set(level.player.animation, 'freefall'),
+			"on_create": "[
 							set(level.player.control_lock, []),
-							set(level.player.velocity_y, 600),
 							set(me.velocity_y, 600),
 							set(me.velocity_x, 500),
-							set(me.animation, 'freefall'),
+							schedule(1,	[
+								set(me.animation, 'freefall'),
+								set(level.player.mid_xy, [123,-1157]),
+								set(level.player.animation, 'freefall'),
+								set(level.player.velocity_y, 600),
+							]),
 							set(me.facing,1),
 							(obj frogatto_playable <- level.player).do_upon_landing( [def() shake_screen(200, 200, 100, 100), def() sound_falloff('frogatto-fall-thump.wav')] ),
 							schedule(200,fire_event(me, 'script1'))]",
