--- a/data/level/Forest/perilous-precipice-fall.cfg
+++ b/data/level/Forest/perilous-precipice-fall.cfg
@@ -95,7 +95,6 @@
 							set(level.player.control_lock, []),
 							set(level.player.facing, 1),
 							set(me.parent, level.player),
-							set(me.animation, 'perched_flap'),
 							set(me.relative_x, -15),
 							set(me.relative_y, -20),
 							set(me.facing,1),
@@ -109,6 +108,9 @@
 					schedule(25*15,	fire_event(me, 'script2')),
 				]",
 			"on_script2": "teleport('moth-boss.cfg','','',null,true)",
+			"property_data": {
+				"start_mode": "fly",
+			},			
 			"type": "berd_npc",
 			"x": 992,
 			"y": -416
