--- a/data/objects/props-interactive/npcs/berd_npc.cfg
+++ b/data/objects/props-interactive/npcs/berd_npc.cfg
@@ -188,4 +188,28 @@ events: "1:armraise, 114:armdrop, 30:42:headscratch",
 	},
 	
 ],
+
+	object_type: {
+		id: "non_solid_passenger",
+		prototype: ["standard_values"],
+		animation: [{
+			"@base": true,
+			image: "npc/berd.png",
+			pad: 3,
+			accel_y: 00,
+			solid_area: null,
+		},{
+			id: "perch",
+			rect: [517,1,569,46],
+			frames: 3,
+			reverse: true,
+			duration: 20,
+		},{
+			id: "perched_flap",
+			rect: [517,1,569,46],
+			frames: 10,
+			frames_per_row: 5,
+			duration: 4,
+		}],
+	}
 }
