Fixed a cosmetic issue on berd's entry into the crevice-village warning cutscene.

--- a/data/level/Seaside/crevice-village.cfg
+++ b/data/level/Seaside/crevice-village.cfg
@@ -556,6 +556,9 @@
 				"custom": true,
 				"face_right": false,
 				"label": "_278255c4",
+				"property_data": {
+					"start_mode": "fly",
+				},
 				"on_talk": "[swallow_event(),speech_dialog( 	
 							Berd,			set(Berd.animation, 'emote_talk'),
 											[~Glad I caught you!\\nYou'd better be aware of this...~],
