Restructured the perilous-precipice conversation so that the bulk of the cutscene, outside of the initial kickoff, is puppeteered by a level_controller, rather than the Berd npc object itself, because if we're going to remove berd and replace him with a dummy object, we'd lose all of that scripting the moment his npc object is deleted.

--- a/data/level/Forest/perilous-precipice.cfg
+++ b/data/level/Forest/perilous-precipice.cfg
@@ -159,140 +159,12 @@
 			"always_active": 1,
 			"current_frame": "normal",
 			"custom": 1,
-			"label": "_12f11e25",
-			"on_interact": "if( (not level.player.get_stored_event('moth_boss_fight_won')),
-									[swallow_event(), level.player.scripted_move_to_x(988, 1, def() -> commands [fire_event(me, 'script1')])]) asserting level.player is obj frogatto_playable",
-			"on_script1": "
-				[speech_dialog(
-								sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:1.0, coefficient:-0.5, obj:level, aspect:'zoom'}),
-								set(level.player.animation, 'emote_oh'),
-				level.player,	[~That's a hell of a drop.\\nPretty scary, looking down there.~],
-								set(level.player.facing, -1),
-								set(me.animation, 'emote_wry'),
-				me,				[~Is it?~],
-						),fire_event(me,'script2')]",
-			"on_script2": "level.player.scripted_move_to_x(870, -1, def() -> commands [
-				speech_dialog(
-								sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:0.5, coefficient:0.5, obj:level, aspect:'zoom'}),
-								set(level.player.animation, 'emote_geez'),
-								set(level.player.control_lock, []),
-				level.player,	[~Well, what, are you not\\nafraid of heights or something?~],
-								
-								set(me.animation, 'emote_wry'),
-				me,				[~No.  That'd be pretty crippling\\nfor a bird, after all.~],
-								set(me.animation, 'emote_talk'),
-								sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:1.0, coefficient:0.5, obj:level, aspect:'zoom'}),
-								schedule(201,set(level.zoom, 1.5)),
-								[~Personally,\\nI find a deep crevasse a bit liberating.~],
-								set(me.animation, 'emote_gesticulate'),
-								[~Kind of the opposite of claustrophobia,\\nif you can imagine it.~],
-								
-								set(level.player.animation, 'emote_confused'),
-				level.player,	[~Hmm, well, at any rate,\\nthis seems like a dead-end for me.~],
-								set(level.player.animation, 'emote_impatient'),
-								[~I guess I'll start hiking back\\nto the forest crossroads.~],
-								
-								set(me.animation, 'emote_talk'),
-				me,				[~You know...~],
-								set(me.animation, 'emote_talk'),
-								[~I'm feeling a little adventuresome right now.~],
-								set(me.animation, 'emote_wry'),
-								[~I <em>did</em> say that I can't carry you.\\nEmphatically, even.~],
-								
-								set(level.player.animation, 'emote_confused'),
-				level.player,	[~Uh....\\n... yes, you did?~],
-				
-								set(me.animation, 'emote_talk'),
-				me,				[~To be perfectly honest, I'm reconsidering.~],
-								set(me.animation, 'emote_gesticulate'),
-								[~I still don't think I could <em>lift</em> you, per se,\\nbut it might be easy enough to glide.~],
-								set(me.animation, 'emote_talk'),
-								[~I see a nice, gentle slope on\\nthe other side we could land on.~],
-								set(me.animation, 'emote_talk'),
-								[~I'm game to try it if you are.~],
-								
-								set(level.player.animation, 'emote_talk'),
-				level.player,	[~Oh dear, I think you're serious.\\nOkay...~],
-				
-								set(me.animation, 'emote_gesticulate'),
-				me,				[~Well, would you like to try?~,
-									~Sure, what the hell.~, [speech_dialog(
-											set(level.player.animation, 'emote_nod'),
-							level.player,	[~Yeah, sure, what the hell.\\nLet's do this.~],
-											set(level.player.animation, 'emote_raisedfinger'),
-											[~Nothing ventured, nothing gained!~],
-											set(level.player.animation, 'emote_geez'),
-											[~Be warned, though.\\nI am not letting go if we lose altitude.~],
-											set(level.player.animation, 'emote_geez'),
-											[~If this starts going bad, you better\\ngive me the softest landing you can manage.~],
-											
-											set(me.animation, 'emote_talk'),
-							me,				[~Right, that seems perfectly fair.~],
-							
-											set(level.player.animation, 'emote_confused'),
-							level.player,	[~Well, uh ... ready when you are?~],
-											fire_event(me, 'script3')
-										)],
-								~No, but maybe later.~, [speech_dialog(
-											set(level.player.animation, 'emote_confused'),
-							level.player,	[~I don't know, maybe later.\\nNot now.~],
-											set(level.player.animation, 'emote_geez'),
-											[~Because, seriously?\\nThat's scary as hell.~],
-											
-											set(me.animation, 'emote_talk'),
-							me,				[~I understand.\\nBy all means though...~],
-											set(me.animation, 'emote_wry'),
-											[~I really feel kinda useless just flying around\\nwhilst you're doing all the fighting.~],
-											set(me.animation, 'emote_gesticulate'),
-											[~I think it's safe to say that\\nit's my turn to risk my neck for once.~],
-											
-											set(level.player.animation, 'emote_raisedfinger'),
-							level.player,	[~Well, I appreciate that, and\\nI might very well take you up on it...~],
-											set(level.player.animation, 'emote_confused'),
-											[~...Eventually.~],
-											set(level.player.control_lock, null),
-											set(level.zoom, 1.0),
-										)],
-								]
-				)]
-				where Berd = me) asserting level.player is obj frogatto_playable",
-			"on_script3": "speech_dialog(
-				set((obj player_controlled_platformer_character <- level.player).exempt_from_dying_whilst_falling_rules_for_a_cutscene, true),
-				sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:1.5, coefficient:-0.25, obj:level, aspect:'zoom'}),
-				schedule(201,set(level.zoom, 1.25)),
-				set(me.animation, 'emote_talk'),
-				me,		[~Right, okay, so walk over here,\\nand I'll hop on your shoulders.~],
-				fire_event(me,'script4')
-				)
-			",
-			"on_script4": "level.player.scripted_move_to_x(me.mid_x, 1, def() -> commands [fire_event(me, 'script5')]) asserting level.player is obj frogatto_playable",
-			"on_script5": "[set(level.player.control_lock, []),set(me.parent, level.player), set(me.collides_with_level, false), set(me.animation, 'perch'), set(me.relative_x, -15), set(me.relative_y, -20), set(me.facing,1),
-			schedule(30, [ 
-					speech_dialog(
-							set(level.player.animation, 'hurt'),
-							level.player,	[~Ow! Hey...~],
-							),
-							fire_event(me, 'script6')])
-					] asserting level.player is obj frogatto_playable",
-			"on_script6": "[speech_dialog(
-							me,				[~Okay, so on three,\\nrun as fast as you can off the edge~],
-											[~3...~],
-											set(level.player.animation, 'emote_confused'),
-							level.player,	[~Waitwaitwait ... what now?!?\\nCan't we take this slow and gentle?~],
-							me,				[~No, we can't.\\nIf we don't run fast, we don't generate lift.~],
-							),
-						fire_event(me, 'script7'),
-					]",
-			"on_script7": "[					set(level.player.animation, 'emote_oh'),
-												transient_speech_dialog(level.player, 49,	[~Oh no.... why....~]),
-								schedule(50,	transient_speech_dialog(me,			  50,	[~Alright, 3!~])),
-								schedule(50*2,	transient_speech_dialog(me,			  50,	[~2...~])),
-								schedule(50*3,	transient_speech_dialog(me,			  50,	[~1...~])),
-								schedule(50*3,	set(me.animation, 'perched_flap')),
-								schedule(50*4,	transient_speech_dialog(me,			  100,	[~GO!!!!!~])),
-								schedule(50*5,	fire_event(me, 'script8')),
-							]",
-			"on_script8": "[set(level.player.is_running, true),level.player.scripted_move_to_x(1240,1, def() -> commands [set(level.player.control_lock, [])] ), schedule(120,teleport('perilous-precipice-fall.cfg','','',null,true) )] asserting level.player is obj frogatto_playable",
+			"label": "berd",
+			"on_interact": "if( (not frogatto.get_stored_event('moth_boss_fight_won')),
+									[swallow_event(), frogatto.scripted_move_to_x(988, 1, def() -> commands [fire_event(controller, 'script1')])])
+				where controller = (obj level_controller <- get_object_or_die(level,'prefight_dialogue_controller'))
+				where frogatto = (obj frogatto_playable <- level.player)
+						",
 			"on_talk": "if( level.player.get_stored_event('moth_boss_fight_won'), 
 				speech_dialog(	
 								set(me.animation, 'emote_talk'),
@@ -330,6 +202,171 @@
 			},
 			"type": "level_controller",
 			"x": 512,
+			"y": 128
+		},
+		{
+			"_uuid": "7db1fa8b81d6463a9a5d0b744f5beb04",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "prefight_dialogue_controller",
+
+			"on_script1": "
+				[speech_dialog(
+								sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:1.0, coefficient:-0.5, obj:level, aspect:'zoom'}),
+								set(level.player.animation, 'emote_oh'),
+				level.player,	[~That's a hell of a drop.\\nPretty scary, looking down there.~],
+								set(level.player.facing, -1),
+								set(Berd.animation, 'emote_wry'),
+				Berd,				[~Is it?~],
+						),fire_event(me,'script2')]
+				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+						
+						",
+			"on_script2": "level.player.scripted_move_to_x(870, -1, def() -> commands [
+				speech_dialog(
+								sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:0.5, coefficient:0.5, obj:level, aspect:'zoom'}),
+								set(level.player.animation, 'emote_geez'),
+								set(level.player.control_lock, []),
+				level.player,	[~Well, what, are you not\\nafraid of heights or something?~],
+								
+								set(Berd.animation, 'emote_wry'),
+				Berd,				[~No.  That'd be pretty crippling\\nfor a bird, after all.~],
+								set(Berd.animation, 'emote_talk'),
+								sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:1.0, coefficient:0.5, obj:level, aspect:'zoom'}),
+								schedule(201,set(level.zoom, 1.5)),
+								[~Personally,\\nI find a deep crevasse a bit liberating.~],
+								set(Berd.animation, 'emote_gesticulate'),
+								[~Kind of the opposite of claustrophobia,\\nif you can imagine it.~],
+								
+								set(level.player.animation, 'emote_confused'),
+				level.player,	[~Hmm, well, at any rate,\\nthis seems like a dead-end for me.~],
+								set(level.player.animation, 'emote_impatient'),
+								[~I guess I'll start hiking back\\nto the forest crossroads.~],
+								
+								set(Berd.animation, 'emote_talk'),
+				Berd,				[~You know...~],
+								set(Berd.animation, 'emote_talk'),
+								[~I'm feeling a little adventuresome right now.~],
+								set(Berd.animation, 'emote_wry'),
+								[~I <em>did</em> say that I can't carry you.\\nEmphatically, even.~],
+								
+								set(level.player.animation, 'emote_confused'),
+				level.player,	[~Uh....\\n... yes, you did?~],
+				
+								set(Berd.animation, 'emote_talk'),
+				Berd,				[~To be perfectly honest, I'm reconsidering.~],
+								set(Berd.animation, 'emote_gesticulate'),
+								[~I still don't think I could <em>lift</em> you, per se,\\nbut it might be easy enough to glide.~],
+								set(Berd.animation, 'emote_talk'),
+								[~I see a nice, gentle slope on\\nthe other side we could land on.~],
+								set(Berd.animation, 'emote_talk'),
+								[~I'm game to try it if you are.~],
+								
+								set(level.player.animation, 'emote_talk'),
+				level.player,	[~Oh dear, I think you're serious.\\nOkay...~],
+				
+								set(Berd.animation, 'emote_gesticulate'),
+				Berd,				[~Well, would you like to try?~,
+									~Sure, what the hell.~, [speech_dialog(
+											set(level.player.animation, 'emote_nod'),
+							level.player,	[~Yeah, sure, what the hell.\\nLet's do this.~],
+											set(level.player.animation, 'emote_raisedfinger'),
+											[~Nothing ventured, nothing gained!~],
+											set(level.player.animation, 'emote_geez'),
+											[~Be warned, though.\\nI am not letting go if we lose altitude.~],
+											set(level.player.animation, 'emote_geez'),
+											[~If this starts going bad, you better\\ngive me the softest landing you can manage.~],
+											
+											set(Berd.animation, 'emote_talk'),
+							Berd,				[~Right, that seems perfectly fair.~],
+							
+											set(level.player.animation, 'emote_confused'),
+							level.player,	[~Well, uh ... ready when you are?~],
+											fire_event(me, 'script3')
+										)],
+								~No, but maybe later.~, [speech_dialog(
+											set(level.player.animation, 'emote_confused'),
+							level.player,	[~I don't know, maybe later.\\nNot now.~],
+											set(level.player.animation, 'emote_geez'),
+											[~Because, seriously?\\nThat's scary as hell.~],
+											
+											set(Berd.animation, 'emote_talk'),
+							Berd,				[~I understand.\\nBy all means though...~],
+											set(Berd.animation, 'emote_wry'),
+											[~I really feel kinda useless just flying around\\nwhilst you're doing all the fighting.~],
+											set(Berd.animation, 'emote_gesticulate'),
+											[~I think it's safe to say that\\nit's my turn to risk my neck for once.~],
+											
+											set(level.player.animation, 'emote_raisedfinger'),
+							level.player,	[~Well, I appreciate that, and\\nI might very well take you up on it...~],
+											set(level.player.animation, 'emote_confused'),
+											[~...Eventually.~],
+											set(level.player.control_lock, null),
+											set(level.zoom, 1.0),
+										)],
+								]
+				)]
+				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+
+				) asserting level.player is obj frogatto_playable",
+			"on_script3": "speech_dialog(
+				set((obj player_controlled_platformer_character <- level.player).exempt_from_dying_whilst_falling_rules_for_a_cutscene, true),
+				sinusoidal_transition({period:200, _init_theta:0.0, _length_theta:1.0, addend:1.5, coefficient:-0.25, obj:level, aspect:'zoom'}),
+				schedule(201,set(level.zoom, 1.25)),
+				set(Berd.animation, 'emote_talk'),
+				Berd,		[~Right, okay, so walk over here,\\nand I'll hop on your shoulders.~],
+				fire_event(me,'script4')
+				)
+				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+			",
+			"on_script4": "frogatto.scripted_move_to_x(Berd.mid_x, 1, def() -> commands [fire_event(me, 'script5')])
+							where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+							where frogatto = (obj frogatto_playable <- level.player)
+				",
+			"on_script5": "[set(level.player.control_lock, []),set(Berd.parent, level.player), set(Berd.collides_with_level, false), set(Berd.animation, 'perch'), set(Berd.relative_x, -15), set(Berd.relative_y, -20), set(Berd.facing,1),
+			schedule(30, [ 
+					speech_dialog(
+							set(level.player.animation, 'hurt'),
+							level.player,	[~Ow! Hey...~],
+							),
+							fire_event(me, 'script6')])
+					]
+				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+					
+					asserting level.player is obj frogatto_playable",
+			"on_script6": "[speech_dialog(
+							Berd,				[~Okay, so on three,\\nrun as fast as you can off the edge~],
+											[~3...~],
+											set(level.player.animation, 'emote_confused'),
+							level.player,	[~Waitwaitwait ... what now?!?\\nCan't we take this slow and gentle?~],
+							Berd,				[~No, we can't.\\nIf we don't run fast, we don't generate lift.~],
+							),
+						fire_event(me, 'script7'),
+					]
+				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+					
+					",
+			"on_script7": "[					set(level.player.animation, 'emote_oh'),
+												transient_speech_dialog(level.player, 49,	[~Oh no.... why....~]),
+								schedule(50,	transient_speech_dialog(Berd,			  50,	[~Alright, 3!~])),
+								schedule(50*2,	transient_speech_dialog(Berd,			  50,	[~2...~])),
+								schedule(50*3,	transient_speech_dialog(Berd,			  50,	[~1...~])),
+								schedule(50*3,	set(Berd.animation, 'perched_flap')),
+								schedule(50*4,	transient_speech_dialog(Berd,			  100,	[~GO!!!!!~])),
+								schedule(50*5,	fire_event(me, 'script8')),
+							]
+				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+							",
+			"on_script8": "[set(level.player.is_running, true),level.player.scripted_move_to_x(1240,1, def() -> commands [set(level.player.control_lock, [])] ), schedule(120,teleport('perilous-precipice-fall.cfg','','',null,true) )] asserting level.player is obj frogatto_playable",
+
+			"property_data": {
+				"_x2_bound": 662,
+				"_x_bound": 412,
+				"_y2_bound": 278,
+				"_y_bound": 28
+			},
+			"type": "level_controller",
+			"x": 550,
 			"y": 128
 		},
 		{
