Finished replacing the instance of berd on the perilous-precipice level's cutscene with a version that safely has no solidity whatsoever.

--- a/data/level/Forest/perilous-precipice.cfg
+++ b/data/level/Forest/perilous-precipice.cfg
@@ -323,41 +323,58 @@
 							where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
 							where frogatto = (obj frogatto_playable <- level.player)
 				",
-			"on_script5": "[set(level.player.control_lock, []),set(Berd.parent, level.player), set(Berd.collides_with_level, false), set(Berd.animation, 'perch'), set(Berd.relative_x, -15), set(Berd.relative_y, -20), set(Berd.facing,1),
-			schedule(30, [ 
+			"on_script5": "[
+				set(level.player.control_lock, []),
+				remove_object(Berd),
+				add_object(Fake_Berd)
+				;
+				set(Fake_Berd.parent, level.player),
+				set(Fake_Berd.collides_with_level, false),
+				set(Fake_Berd.animation, 'perch'),
+				set(Fake_Berd.relative_x, -15),
+				set(Fake_Berd.relative_y, -20),
+				set(Fake_Berd.facing,1),
+				schedule(30, [ 
 					speech_dialog(
 							set(level.player.animation, 'hurt'),
 							level.player,	[~Ow! Hey...~],
 							),
-							fire_event(me, 'script6')])
-					]
+							fire_event(me, 'script6')
+				])
+			]
 				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+				where Fake_Berd = (obj standard_values <- me.custom_storage['fake_berd'])
 					
 					asserting level.player is obj frogatto_playable",
 			"on_script6": "[speech_dialog(
-							Berd,				[~Okay, so on three,\\nrun as fast as you can off the edge~],
+							Fake_Berd,				[~Okay, so on three,\\nrun as fast as you can off the edge~],
 											[~3...~],
 											set(level.player.animation, 'emote_confused'),
 							level.player,	[~Waitwaitwait ... what now?!?\\nCan't we take this slow and gentle?~],
-							Berd,				[~No, we can't.\\nIf we don't run fast, we don't generate lift.~],
+							Fake_Berd,				[~No, we can't.\\nIf we don't run fast, we don't generate lift.~],
 							),
 						fire_event(me, 'script7'),
 					]
-				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+				where Fake_Berd = (obj standard_values <- me.custom_storage['fake_berd'])
 					
 					",
 			"on_script7": "[					set(level.player.animation, 'emote_oh'),
 												transient_speech_dialog(level.player, 49,	[~Oh no.... why....~]),
-								schedule(50,	transient_speech_dialog(Berd,			  50,	[~Alright, 3!~])),
-								schedule(50*2,	transient_speech_dialog(Berd,			  50,	[~2...~])),
-								schedule(50*3,	transient_speech_dialog(Berd,			  50,	[~1...~])),
-								schedule(50*3,	set(Berd.animation, 'perched_flap')),
-								schedule(50*4,	transient_speech_dialog(Berd,			  100,	[~GO!!!!!~])),
+								schedule(50,	transient_speech_dialog(Fake_Berd,			  50,	[~Alright, 3!~])),
+								schedule(50*2,	transient_speech_dialog(Fake_Berd,			  50,	[~2...~])),
+								schedule(50*3,	transient_speech_dialog(Fake_Berd,			  50,	[~1...~])),
+								schedule(50*3,	set(Fake_Berd.animation, 'perched_flap')),
+								schedule(50*4,	transient_speech_dialog(Fake_Berd,			  100,	[~GO!!!!!~])),
 								schedule(50*5,	fire_event(me, 'script8')),
 							]
-				where Berd = (obj flying_npc <- get_object_or_die(level,'berd'))
+				where Fake_Berd = (obj standard_values <- me.custom_storage['fake_berd'])
 							",
 			"on_script8": "[set(level.player.is_running, true),level.player.scripted_move_to_x(1240,1, def() -> commands [set(level.player.control_lock, [])] ), schedule(120,teleport('perilous-precipice-fall.cfg','','',null,true) )] asserting level.player is obj frogatto_playable",
+
+
+			"on_create": "[
+				set(custom_storage['fake_berd'], object('berd_npc.non_solid_passenger', x, y, 1)),
+			]",
 
 			"property_data": {
 				"_x2_bound": 662,
