--- a/data/objects/props-interactive/npcs/berd_npc.cfg
+++ b/data/objects/props-interactive/npcs/berd_npc.cfg
@@ -192,6 +192,21 @@ events: "1:armraise, 114:armdrop, 30:42:headscratch",
 	object_type: {
 		id: "non_solid_passenger",
 		prototype: ["standard_values"],
+		zorder: "@include data/zorder.cfg:npcs",
+		/*
+			This utility object was cooked up entirely for a cutscene on `perilous-precipice.cfg`, where frogatto & berd decide to try doing a co-op thing where berd hops on his shoulders, and tries to glide across a ravine, with frogatto being carried below.   In order to do this animation, we have to designate Berd as a "passenger" on frogatto's back (which at this point, isn't any kind of explicit concept in the engine.
+			
+			In theory, we'd simply eliminate his solidity and then position him on frogatto's back, but in reality, we're not actually allowed to do that, even though we can punch the settings for that into an animation and have the game not complain about it.   It's not actually legal to eliminate something's solidity entirely, so setting that does nothing.
+			
+			The failure case of not doing so is that the solid object for his NPC (pinned to frogatto's back using relative positioning) runs a risk of colliding with the ground.  If it does, it'll induce a solidity error, and then the game asserts to the desktop.
+			
+			In order to avoid this, what we want to do is create a purely cosmetic object that's just the two desired animations, and then, for that part of the conversation (which conveniently is right at the very end), we'll just remove the berd_npc object, and replace it with this.
+		*/
+		
+		on_end_anim: "set(animation, animation)",
+		
+		
+#-------------------------- special animations for hopping onto frogatto's back --------------------------#
 		animation: [{
 			"@base": true,
 			image: "npc/berd.png",
