--- a/data/level/Unused/Test/test-liquids.cfg
+++ b/data/level/Unused/Test/test-liquids.cfg
@@ -130,6 +130,47 @@
 			"x": -1676,
 			"y": 276
 		},
+		{
+			"_uuid": "5606193670564c8886bde4f00372ad38",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5b4a448d",
+			"property_data": {
+				"_x2_bound": -720,
+				"_x_bound": -964,
+				"_y2_bound": 214,
+				"_y_bound": -36,
+				"current_vel_x": 0,
+				"current_vel_y": -100
+			},
+			"type": "current_generator",
+			"x": -864,
+			"y": 64
+		},
+		{
+			"_uuid": "6d0ff628b7e748a18d297e17ec7107dc",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1fa168e7",
+			"property_data": {
+				"_y2_bound": -220
+			},
+			"type": "fan_vertical",
+			"x": -1248,
+			"y": 80
+		},
+		{
+			"_uuid": "18d7495279a2469fa6bf226ba9b527e0",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2d13466a",
+			"property_data": {
+				"_x2_bound": 494
+			},
+			"type": "fan_horizontal",
+			"x": 144,
+			"y": -96
+		}
 	],
 	"dimensions": [-1856,-800,3135,1055],
 	"id": "test-liquids.cfg",
@@ -143,15 +184,36 @@
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
-			"tiles": ",,,,,,,,,,nbr,nbr,nbr
-,,,,,,,,,,nbr,nbr,nbr
-,,,,,,,,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
-,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
-,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+			"tiles": ",
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
+,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
+,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr
 ,,,,,,,,,,,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
@@ -182,7 +244,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 			"variations": "",
 			"x": -1856,
 			"x_speed": 100,
-			"y": -96,
+			"y": -768,
 			"y_speed": 100,
 			"zorder": "exterior_background_tiles"
 		},
@@ -275,7 +337,7 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 				"rect": [-802,240,-96,592]
 			},
 			{
-				"color": [0.549019,0.0,0.0,0.274509],
+				"color": [0.549018,0.0,0.0,0.274509],
 				"object": "@eval deserialize('7d5515c56c4545e1a8c7c1d3c3aeb167')",
 				"rect": [-1792,208,-1168,592]
 			}
