Fixes an UI sound control bug.
Fixes a UI bug by which the sound control was getting boosted up to
1600 (in a scale of 1 to 100).

--- a/data/objects/game_menu_controller.cfg
+++ b/data/objects/game_menu_controller.cfg
@@ -26,7 +26,7 @@
 		_change_music_volume: "def (decimal value) -> commands
 		[
 			remove_object(_music_label),
-			set(_preferences.music_volume, value),
+			set(_preferences.music_volume, clamp(value, 0, 1)),
 			spawn('label', 0, 0, {
 				x: lib.gui.screen_width / 2 /* + */ /* 50 */ /*fixme*/
 					- lib.gui.px(110),
@@ -37,7 +37,7 @@
 				_valign: 'top',
 				zorder: zorder + 20,
 				_font_size: lib.gui.py(14),
-				_text: ['Music Volume: ' + str(int(100 * value))],
+				_text: ['Music Volume: ' + str(int(100 * clamp(value, 0, 1)))],
 			}, [
 				set(me._music_label, child),
 			]),
@@ -46,7 +46,7 @@
 		_change_sound_volume: "def (decimal value) -> commands
 		[
 			remove_object(_sound_label),
-			set(_preferences.sound_volume, value),
+			set(_preferences.sound_volume, clamp(value, 0, 1)),
 			spawn('label', 0, 0, {
 				x: lib.gui.screen_width / 2 /* + */ /* 50 */ /*fixme*/
 					- lib.gui.px(110),
@@ -57,7 +57,7 @@
 				_valign: 'top',
 				zorder: zorder + 20,
 				_font_size: lib.gui.py(14),
-				_text: ['Sound Volume: ' + str(int(100 * value))],
+				_text: ['Sound Volume: ' + str(int(100 * clamp(value, 0, 1)))],
 			}, [
 				set(me._sound_label, child),
 			]),
