Some tiny changes to the mushroom boss.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -239,6 +239,17 @@ properties: {
 		attack_area: [0,76,159,176],
 	},
 	{
+		id: "spit",
+		image: "enemies/mushroom-boss3.png",
+		rect: [0,0,159,175],
+		frames:4,
+		frames_per_row:2,
+		reverse: true,
+		duration: 3,
+		feet_y: 176,
+		attack_area: [0,76,159,176],
+	},
+	{
 		id: "enter_guard",
 		image: "enemies/mushroom-boss4.png",
 		rect: [0,0,159,159],
@@ -460,6 +471,10 @@ object_type: [ {
 									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) ),
 									
 									an_upper_stalk.set_behavior('guard'),
+									schedule(50, [
+										spawn('mushroom_boss.acid_dropper_big_shot', an_upper_stalk.x, an_upper_stalk.y, 1),
+										set(an_upper_stalk.animation, 'spit'),
+									]),
 
 							]",
 	
